--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,6 @@
 /*   FIRST SECTION    */
 
+
 .main-one {
   margin: 25px;
 }
@@ -17,12 +18,14 @@
 .main-two {
   background-color: #0B1942;
   display: grid;
+  padding-bottom: 20px;
 }
 
 .main-two h2 {
   font-size: 2.5em;
   margin-left: 25px;
   font-weight: 400;
+  width: 90vw;
 }
 
 .rashomon, .movie-item {
@@ -31,23 +34,34 @@
 }
 
 .rashomon {
-  margin: 0 15px;
+  margin-left: 15px;
   display: grid;
   grid-template-columns: 50% 50%;
+  width: 87vw;
+}
+.rashoman-image {
+  width: 30vw;
+  height: 50vw;
 }
 
 .movie-image {
-  width: 140px;
-  height: 200px;
+  width: 35vw;
+  height: 50vw;
 }
+/*.movie-item {
+  width: 30vw;
+  height: 40vw;
+}*/
 
 .rashomon-info {
-  display: grid;
+  display: subgrid;
   grid-template-rows: 15% 15% 70%;
-  margin: 0 10px;
+  margin-left: -10px;
+  width: 40vw;
+  height: 50vw;
 }
 
-.rashomon-title, .next-rashomon-date, .rashomon-discussion {
+.rashomon-title, .rashomon-discussion {
   margin-bottom: 10px;
 }
 
@@ -75,9 +89,10 @@
 .movie-block {
   margin: 15px;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 52% 52%;
   line-height: 150%;
   align-content: center;
+  width: 90vw;
 }
 
 .movie-block p {
@@ -100,14 +115,18 @@
   display: flex;
 }
 
-.movie-image {
-  width: 95px;
-  height: 134px;
+.rashoman-image {
+  width: 40vw;
+  height: 50vw;
 }
 
-.next-movie-image {
-  height: 420px;
-  width: 300px;
+.movie-item {
+  width: 20vw;
+}
+
+.movie-image {
+  width: 20vw;
+  height: 30vw;
 }
 
 .rashomon-info {
@@ -117,10 +136,11 @@
 }
 
 .movie-block {
-  margin: 15px;
+  /*margin: 15px;*/
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   line-height: 150%;
+  width: 90vw;
 }
 }
 
@@ -132,35 +152,48 @@
     padding: 10px 15px;
   }
 
+  .main-two {
+    width: 100vw;
+  }
+
   .main-one {
     line-height: 120%;
   }
 
-  .movie-image {
-    width: 140px;
-    height: 200px;
-  }
-
-  .rashomon {
-    display: flex;
-    margin: 15px;
-    height: 200px;
-    font-size: .8em;
+  .rashoman-image {
+  width: 17.5vw;
+  height: 25vw;
   }
 
   .rashomon-info {
     display: grid;
     grid-template-rows: 15% 15% 70%;
     margin: 15px;
-    line-height: 100%;
+    /*line-height: 100%;*/
+    height: 30vw;
+  }
+
+  .movie-image {
+    width: 17.5vw;
+    height: 25vw;
+  }
+
+  .rashomon {
+    display: flex;
+    margin: 15px;
+    width: 40vw;
+    height: 30vw;
+    font-size: 1em;
   }
 
   .movie-block {
     margin: 15px;
     display: grid;
-    grid-template-columns: 50% 50%;
+    justify-content: center;
+    grid-template-columns: 43% 43%;
     line-height: 120%;
-    font-size: .8em;
+    font-size: 1.2em;
+    width: 50vw;
   }
 
   .main-two {
@@ -170,10 +203,10 @@
 
   .main-two h2 {
     font-size: 2em;
-    margin-left: 25px;
     font-weight: 400;
-    grid-column-start: first;
-    grid-column-end: end;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    width: 20vw;
   }
 
 }
