--- a/css/join.css
+++ b/css/join.css
@@ -21,6 +21,8 @@ fieldset {
   width: 300px;
   height: 300px;
   margin: auto;
+  margin-top: 30px;
+
 }
 
 .credentials {
