--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ footer {
   height: 190px;
 }
 
-.copyright {
+.copyright-nav {
   color: #FFFFFF;
   margin-top: 20px;
 }
